prevent blurry footer on machines with helvetica neue installed

--- a/less/blog.less
+++ b/less/blog.less
@@ -58,6 +58,7 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	line-height: 13px;
+	font-weight: 400;
 }
 
 #footer ul {
